# simple_SPMD_interface

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml
headers/: array_wrapper.h  basic_task.h  buffer_transfer.h  communicator.h  instruction.h  intracomm.h  it_queue.h  memory_manager.h  message.h  message_factory.h  parallel.h  parallel_core.h  parallel_defs.h  parallelizer.h  ready_transfer.h  standard_transfer.h  synchronous_transfer.h  task_graph.h  transfer.h
headers/apl/: buffer_transfer.h  comm_group.h  communicator.h  intracomm.h  message.h  message_factory.h  parallel_core.h  parallel_defs.h  ready_transfer.h  request_container.h  standard_transfer.h  synchronous_transfer.h  task.h  task_graph.h  transfer.h
headers/apl/containers/: it_queue.h  vector_map.h
headers/apl/parallelizer/: graphs.h  instruction.h  memory_manager.h  parallelizer.h  parallelizer2.h
headers/apl/parallelizer2/: graphs.h  memory_manager.h  parallelizer2.h
headers/apl/parallelizer_shared/: instruction.h
samples/: CMakeLists.txt
samples/dynamic_merge_sort/: CMakeLists.txt  dmerge.cpp
samples/matrix-matrix_multiplication/: matrix_mul.cpp
samples/matrix-vector_multiplication/: matrix_mul.cpp
samples/merge_sort/: merge.cpp
samples/quick_sort/: quicksort.cpp
samples/quick_sort_sep/: quicksort.cpp
samples/random_tasks/: random_tasks.cpp
samples/vector_sum/: CMakeLists.txt  vector_sum.cpp
sources/: CMakeLists.txt  array_wrapper.cpp  basic_task.cpp  buffer_transfer.cpp  communicator.cpp  instruction.cpp  intracomm.cpp  it_queue.cpp  memory_manager.cpp  message.cpp  message_factory.cpp  parallel_core.cpp  parallelizer-instruction.cpp  parallelizer.cpp  ready_transfer.cpp  standard_transfer.cpp  synchronous_transfer.cpp  task_graph.cpp  transfer.cpp
sources/apl/: buffer_transfer.cpp  comm_group.cpp  communicator.cpp  intracomm.cpp  message.cpp  message_factory.cpp  parallel_core.cpp  ready_transfer.cpp  request_container.cpp  standard_transfer.cpp  synchronous_transfer.cpp  task.cpp  task_graph.cpp  transfer.cpp
sources/apl/containers/: it_queue.cpp  vector_map.cpp
sources/apl/parallelizer/: graphs.cpp  instruction.cpp  memory_manager.cpp  parallelizer.cpp  parallelizer2.cpp
sources/apl/parallelizer2/: graphs.cpp  memory_manager.cpp  parallelizer2.cpp
sources/apl/parallelizer_shared/: instruction.cpp
testing/: sample_testing.pl
